# kchd

./: .isort.cfg  LICENSE  Makefile  README.md  boot_40.service  leds.py  main.py  pyproject.toml
.github/workflows/: tests.yml
kchd/: __init__.py  __main__.py  app.py  controllers.py  gpio.py  hardware.py  rpi.py  types.py
kchd/controllers/: __init__.py  astmetad.py  astprocd.py  astwifid.py  controller.py  request.py  system_status.py
kchd/driver/: __init__.py  driver.py  gpio.py  mock.py
stubs/RPi/: GPIO.pyi
tests/: test_foo.py
