[tool.poetry]
name = "kchd"
version = "0.1.0"
description = "Control program for the Student Robotics KCH board"
authors = ["Karina Kwiatek <kkwiatek@studentrobotics.org>"]

[tool.poetry.dependencies]
python = "^3.8"
astoria = "^0.9.0"
"rpi.gpio" = "^0.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

