[tool.poetry]
name = "kchd"
version = "0.4.0"
description = "KCH LED Daemon"
authors = ["Dan Trickey <dtrickey@studentrobotics.org>"]

[tool.poetry.dependencies]
python = "^3.8"
astoria = "^0.10.0"

[tool.poetry.dev-dependencies]
flake8 = "*"
flake8-commas = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-docstrings = "*"
flake8-isort = "*"
flake8-mutable = "*"
flake8-todo = "*"
mypy = "*"
pytest = "*"
pytest-cov = "*"
pytest-asyncio = "*"
rope = "*"
isort = {version = "*",extras = ["pyproject"]}
m2r2 = "*"
types-click = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
kchd = 'kchd:main'
